# autochapters

./: LICENSE  pyproject.toml
scripts/: numfocus.py
